[gd_scene load_steps=4 format=2]

[ext_resource path="res://font.tres" type="DynamicFont" id=1]
[ext_resource path="res://script/scene object/SettingScene.gd" type="Script" id=2]
[ext_resource path="res://audio/setting.ogg" type="AudioStream" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 173.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 1 )
text = "Game Setting Page"

[node name="Volume" type="Label" parent="."]
margin_top = 64.0
margin_right = 125.0
margin_bottom = 87.0
custom_fonts/font = ExtResource( 1 )
text = "Music Volume"

[node name="val" type="HSlider" parent="Volume"]
margin_left = 173.0
margin_right = 368.0
margin_bottom = 23.0
min_value = -60.0
max_value = 0.0
tick_count = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Length" type="Label" parent="."]
margin_top = 128.0
margin_right = 132.0
margin_bottom = 151.0
custom_fonts/font = ExtResource( 1 )
text = "Phrase Length"

[node name="val" type="SpinBox" parent="Length"]
margin_left = 173.0
margin_right = 368.0
margin_bottom = 24.0
min_value = 1.0
max_value = 1000.0
value = 60.0
allow_greater = true
suffix = "sec"

[node name="Multi" type="Label" parent="."]
margin_top = 192.0
margin_right = 125.0
margin_bottom = 215.0
custom_fonts/font = ExtResource( 1 )
text = "HP Multiplier"

[node name="val" type="SpinBox" parent="Multi"]
margin_left = 173.0
margin_right = 368.0
margin_bottom = 24.0
min_value = 0.1
max_value = 10.0
step = 0.1
value = 1.0
allow_greater = true
suffix = "x"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_top = 256.0
margin_right = 272.0
margin_bottom = 276.0
text = "SAVE AND BACK"

[node name="Button2" type="Button" parent="."]
margin_top = 320.0
margin_right = 272.0
margin_bottom = 340.0
text = "TEST MUSIC VOLUME/STOP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="value_changed" from="Volume/val" to="." method="_on_val_value_changed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
